--- a/css/style.css
+++ b/css/style.css
@@ -20,18 +20,23 @@ body {
 }
 
 
-
-
 h1 {
     font-size: 90px;
     margin-bottom: 0px;
+    margin-top: 40px;
     
 }
 
 #gallery {
-    display: flex;
+    
     position: relative;
     padding: 100px;
+}
+
+#gallery h1{
+    text-align: center;
+    margin: 0px;
+    font-size: 60px;
 }
 
 #gallery::before {
@@ -44,7 +49,7 @@ h1 {
     background-image: url(../img/the_powerful_new_ai_hardware_of_the_future.jpg);
     background-blend-mode: exclusion;
     background-size: cover;
-    opacity: 0.5;
+    opacity: 0.3;
     z-index: -1;
 }
 
@@ -53,11 +58,6 @@ h1 {
     z-index: 1;
 }
 
-#gallery img {
-    max-width: 100%;
-    margin: 60px 50px 50px 50px;
-    border-radius: 100px;
-}
 
 #text {
     font-size: 25px;
@@ -107,3 +107,22 @@ footer {
 .contact-form button:hover {
     background-color: #0056b3;
 }
+
+/* suratebi textis qvesh */
+
+.image-container {
+    display: flex;
+    justify-content: center; /* Center images horizontally */
+    gap: 150px; /* Space between images */
+    margin-top: 50px; /* Space above the image container */
+    margin-bottom: 0;
+}
+
+/* Styling the images */
+.image-container img {
+    width: 100px; /* Set uniform width */
+    height: 100px; /* Set uniform height */
+    object-fit: cover; /* Ensure images fill the area without distortion */
+    transition: transform 0.3s ease; /* Smooth transition for hover effect */
+}
+
