--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: "BPG Nino Mtavruli", Arial, sans-serif;
     text-align: center;
     margin: 0;
-    background: linear-gradient(45deg, rgba(173, 216, 230, 0.6), rgba(221, 160, 221, 0.6), rgba(240, 248, 255, 0.6));
+    background: linear-gradient(45deg, #d5f5ff, rgb(252, 173, 252), rgba(240, 248, 255, 0.973));
     background-size: 200% 200%;
     animation: gradientBackground 12s ease infinite;
 }
@@ -66,9 +66,11 @@ h2 {
 
 #text {
     font-size: 25px;
-    text-align: justify;
+    text-align: center;
     color: black;
     font-weight: 700;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 footer {
